--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 <body>
   <div class="container">
     <h4 class="mt-2 text-center">Search Image for create slider</h4>
+   <div class="d-flex justify-content-center  ">
+      <button  id='flower' type="button" class="btn btn-primary m-1">Flower</button>
+<button id="book" type="button" class="btn btn-secondary m-1 ">Book</button>
+<button id="river" type="button" class="btn btn-success m-1">River</button>
+<button  id="summer" type="button" class="btn btn-danger m-1">Summer</button>
+<button id="nature" type="button" class="btn btn-warning m-1">Nature</button>
+<button  id="environment" type="button" class="btn btn-info m-1">Environment</button>
+
+
+   </div>
+ 
+</div>
     <div class="form-inline mt-3 d-flex justify-content-center">
       <div class="input-group col-md-6 mb-2">
         <input type="text" class="form-control" id="search" placeholder="nature">
@@ -34,8 +46,8 @@
         </div>
         <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
       </div>
-       <div id="spinner-loading" class="d-flex justify-content-center ">
-             <div  class="spinner-border text-danger d-none justify-content-center " role="status">
+       <div  class="d-flex justify-content-center ">
+             <div id="spinner-loading"  class="spinner-border text-danger d-none justify-content-center " role="status">
   <span class="visually-hidden"></span>
 </div> 
        </div>
