--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div> 
        </div>
       <div class="row gallery">
-
+       <h3  id='not-found'>No Result Found</h3>
       </div>
     </section>
     <!-- slider -->
